--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,8 @@
     "angular": "~1.4.2"
   },
   "devDependencies": {
-    "angular-mocks": "~1.4.2"
+    "angular-mocks": "~1.4.2",
+    "masonry": "~4.0.0"
   },
   "overrides": {
     "bootstrap-sass": {
